log
Fri 22 Mar 2024 01:02:22 AM UTC: 
 tests:  0|5
total_score: 0/70
967abd6
Fri 22 Mar 2024 01:02:40 AM UTC: 
 exercises.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c:60:5: error: redefinition of ‘sumaLista’
   60 | int sumaLista(List *L) {
      |     ^~~~~~~~~
exercises.c:44:5: note: previous definition of ‘sumaLista’ with type ‘int(List *)’
   44 | int sumaLista(List *L) {
      |     ^~~~~~~~~
test.c: In function ‘test_crea_lista’:
test.c:61:15: error: implicit declaration of function ‘crea_lista’; did you mean ‘create_list’? [-Werror=implicit-function-declaration]
   61 |     List* L = crea_lista();
      |               ^~~~~~~~~~
      |               create_list
test.c:61:15: error: initialization of ‘List *’ {aka ‘struct List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
ec6c102
Fri 22 Mar 2024 01:02:54 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c:60:5: error: redefinition of ‘sumaLista’
   60 | int sumaLista(List *L) {
      |     ^~~~~~~~~
exercises.c:44:5: note: previous definition of ‘sumaLista’ with type ‘int(List *)’
   44 | int sumaLista(List *L) {
      |     ^~~~~~~~~
test.c: In function ‘test_crea_lista’:
test.c:61:15: error: implicit declaration of function ‘crea_lista’; did you mean ‘create_list’? [-Werror=implicit-function-declaration]
   61 |     List* L = crea_lista();
      |               ^~~~~~~~~~
      |               create_list
test.c:61:15: error: initialization of ‘List *’ {aka ‘struct List *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
1894f00
Fri 22 Mar 2024 01:03:52 AM UTC: 
 exercises.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:9: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   51 |         push_back(L, elemento); // Agregar el puntero del elemento a la lista
      |         ^~~~~~~~~
      |         pushBack
cc1: all warnings being treated as errors
Compilation failed
1cdf3f4
Fri 22 Mar 2024 01:04:54 AM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:9: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |         push_back(L, elemento); // Agrega el puntero del elemento a la lista
      |         ^~~~~~~~~
      |         pushBack
cc1: all warnings being treated as errors
Compilation failed
987c07b
Fri 22 Mar 2024 01:05:47 AM UTC: 
 exercises.c | 30 ++++++++++++++++++++++++++----
 1 file changed, 26 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:9: error: unknown type name ‘Node’
   50 |         Node* newNode = (Node*)malloc(sizeof(Node));
      |         ^~~~
exercises.c:50:26: error: ‘Node’ undeclared (first use in this function)
   50 |         Node* newNode = (Node*)malloc(sizeof(Node));
      |                          ^~~~
exercises.c:50:26: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:50:31: error: expected expression before ‘)’ token
   50 |         Node* newNode = (Node*)malloc(sizeof(Node));
      |                               ^
exercises.c:57:16: error: request for member ‘data’ in something not a structure or union
   57 |         newNode->data = elemento;
      |                ^~
exercises.c:58:16: error: request for member ‘next’ in something not a structure or union
   58 |         newNode->next = NULL;
      |                ^~
exercises.c:61:14: error: invalid use of incomplete typedef ‘List’
   61 |         if (L->size == 0) {
      |              ^~
exercises.c:62:14: error: invalid use of incomplete typedef ‘List’
   62 |             L->first = newNode;
      |              ^~
exercises.c:65:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   65 |             Node* current = L->first;
      |                   ^~~~~~~
      |                   popCurrent
exercises.c:65:30: error: invalid use of incomplete typedef ‘List’
   65 |             Node* current = L->first;
      |                              ^~
exercises.c:73:10: error: invalid use of incomplete typedef ‘List’
   73 |         L->size++;
      |          ^~
Compilation failed
a90082b
Fri 22 Mar 2024 01:07:02 AM UTC: 
 exercises.c | 28 +++++-----------------------
 1 file changed, 5 insertions(+), 23 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:54:9: error: implicit declaration of function ‘append’ [-Werror=implicit-function-declaration]
   54 |         append(L, elemento);
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
06fb57e
Fri 22 Mar 2024 01:08:16 AM UTC: 
 exercises.c | 26 ++++++++++++--------------
 1 file changed, 12 insertions(+), 14 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:58:5: error: unknown type name ‘Node’
   58 |     Node *current = L->first; // Obtén el primer nodo de la lista
      |     ^~~~
exercises.c:58:22: error: invalid use of incomplete typedef ‘List’
   58 |     Node *current = L->first; // Obtén el primer nodo de la lista
      |                      ^~
exercises.c:60:32: error: request for member ‘data’ in something not a structure or union
   60 |         suma += *((int*)current->data); // Suma el valor del elemento actual
      |                                ^~
exercises.c:61:26: error: request for member ‘next’ in something not a structure or union
   61 |         current = current->next; // Avanza al siguiente nodo
      |                          ^~
Compilation failed
9fbfcb2
